# arXiv_bot

./: .gitignore  README.md  main.py  pyproject.toml  test_arxiv.ipynb
datas/: arxiv_papers.csv
libs/: fetch_arxiv.py  summarize.py  to_message.py
sample_code/: test_arxiv.ipynb  test_cohere.ipynb  test_discort.ipynb  test_main.ipynb
