[tool.poetry]
name = "arxiv-bot"
version = "0.1.0"
description = ""
authors = ["sugimochi <tashinoki.1019@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
pandas = "^2.2.2"
arxiv = "^2.1.3"
discord-webhook = "^1.3.1"
openai = "^1.46.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
